--- a/Codigo/Frota/FrotaWeb/wwwroot/css/index-pages.css
+++ b/Codigo/Frota/FrotaWeb/wwwroot/css/index-pages.css
@@ -181,3 +181,96 @@ body {
     .icone:hover {
         color: #0056b3;
     }
+
+.navigation-pages {
+    margin-top: 10px;
+    width: 100%;
+    max-width: 1080px;
+    height: 30px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+    .navigation-pages button {
+        background-color: #0C69AB;
+        border: none;
+        border-radius: 8px;
+        display: flex;
+        justify-content: center;
+        align-content: center;
+    }
+
+        .navigation-pages button:hover {
+            background-color: #013759;
+        }
+
+        .navigation-pages button span {
+            color: #fff;
+            font-weight: 600;
+        }
+
+.page-item {
+    list-style: none;
+    width: 30px;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    margin-right: 1px;
+    border-radius: 8px;
+    overflow: hidden;
+}
+
+
+.page-link {
+    background-color: #0C69AB;
+    color: #fff;
+    border-radius: 8px;
+    font-weight: 600;
+    margin: 0px;
+    text-decoration: none;
+    outline: none;
+    box-shadow: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%; /* Garante alinhamento */
+    height: 100%; /* Preenche o botão */
+}
+
+.page-item span {
+    font-size: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.page-item.active a {
+    background-color: #000; /* Destaque para o botão ativo */
+    cursor: default; /* Cursor padrão para botão ativo */
+    border-radius: 8px;
+}
+
+.page-item:disabled {
+    list-style: none;
+    background-color: red;
+    pointer-events: none;
+    cursor: not-allowed;
+}
+
+.page-item.disabled a {
+    background-color: #0C69AB; /* Cor cinza para desabilitado */
+    pointer-events: none; /* Desativa interatividade */
+    cursor: not-allowed; /* Mostra cursor de não permitido */
+    border-radius: 8px;
+}
+
+.navigation-pages div {
+    flex-grow: 1;
+    background-color: #fff;
+    border-radius: 8px;
+    height: 30px;
+    margin-left: 2px;
+}
