Melhoria da paginação

--- a/Codigo/Frota/FrotaWeb/wwwroot/css/index-pages.css
+++ b/Codigo/Frota/FrotaWeb/wwwroot/css/index-pages.css
@@ -272,5 +272,5 @@ body {
         background-color: #fff;
         border-radius: 8px;
         height: 30px;
-        margin-left: 2px;
+        margin-right: 4px;
     }
