--- a/Codigo/Frota/FrotaWeb/wwwroot/css/index-pages.css
+++ b/Codigo/Frota/FrotaWeb/wwwroot/css/index-pages.css
@@ -67,6 +67,7 @@ body {
 }
 
     .titulo-pagina .voltar {
+        margin-top: 20px;
         height: 60px;
         font-size: 20px;
         color: #171717;
@@ -91,7 +92,7 @@ body {
     height: 40px;
     width: 160px;
     padding: 10px 20px;
-    border-radius: 5px;
+    border-radius: 8px;
     text-decoration: none;
     font-weight: 700;
     font-size: 17px;
@@ -181,6 +182,7 @@ body {
     .icone:hover {
         color: #0056b3;
     }
+
 
 .navigation-pages {
     margin-top: 10px;
@@ -272,5 +274,5 @@ body {
     background-color: #fff;
     border-radius: 8px;
     height: 30px;
-    margin-left: 2px;
+    margin-right: 4px;
 }
