--- a/Codigo/Frota/FrotaWeb/wwwroot/css/index-pages.css
+++ b/Codigo/Frota/FrotaWeb/wwwroot/css/index-pages.css
@@ -67,8 +67,8 @@ body {
 }
 
     .titulo-pagina .voltar {
-        margin-top: 20px;
-        height: 60px;
+        margin-top: 30px;
+        height: 50px;
         font-size: 20px;
         color: #171717;
         font-weight: 600;
@@ -83,6 +83,14 @@ body {
         color: #333;
     }
 
+.acoes {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 10px;
+}
 /* Botão Criar */
 .acoes .btn-primario {
     background-color: #ffffff;
@@ -98,8 +106,6 @@ body {
     font-size: 17px;
     transition: background-color 0.3s;
     box-shadow: 2px 4px 6px rgba(0, 0, 0, 0.1);
-    margin-top: 10px;
-    margin-bottom: 10px;
 }
 
     .acoes .btn-primario:hover {
@@ -107,6 +113,71 @@ body {
         color: #ffffff;
         box-shadow: 2px 4px 6px rgba(0, 0, 0, 0.3);
     }
+
+/*Estilo da barra de pesquisa*/
+.acoes form {
+    display: flex;
+    flex-direction: row;
+}
+
+    .acoes form input {
+        height: 40px;
+        background-color: #ffffff;
+        border: 0px solid #ff0000;
+        border-radius: 8px;
+        padding-left: 15px;
+        padding-right: 15px;
+        font-size: 17px;
+        box-shadow: 2px 4px 6px rgba(0, 0, 0, 0.1);
+        transition: 0.2s;
+    }
+
+        .acoes form input:hover {
+            box-shadow: 2px 4px 6px rgba(0, 0, 0, 0.3);
+        }
+
+        .acoes form input:focus {
+            border: 2px solid #0C69AB;
+            box-shadow: 2px 4px 6px rgba(0, 0, 0, 0.3);
+            outline: none;
+        }
+
+    .acoes form button {
+        height: 40px;
+        width: 40px;
+        background-color: #0C69AB;
+        color: #ffffff;
+        border: 0px solid #0C69AB;
+        border-radius: 8px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-left: 5px;
+        box-shadow: 2px 4px 6px rgba(0, 0, 0, 0.1);
+        transition: 0.2s;
+    }
+
+        .acoes form button:hover {
+            box-shadow: 2px 4px 6px rgba(0, 0, 0, 0.3);
+        }
+
+        .acoes form button span {
+            font-size: 20px;
+        }
+
+        .acoes form button:focus{
+            outline: none;
+        }
+
+        .acoes form button:hover {
+            background-color: #013759;
+        }
+
+        @media (max-width: 768px) {
+            .acoes form button {
+                display: none;
+            }
+        }
 
 /* Estilo da Tabela */
 .tabela {
@@ -185,7 +256,6 @@ body {
 
 
 .navigation-pages {
-    margin-top: 10px;
     width: 100%;
     max-width: 1080px;
     height: 30px;
@@ -271,8 +341,9 @@ body {
 
 .navigation-pages div {
     flex-grow: 1;
-    background-color: #fff;
-    border-radius: 8px;
-    height: 30px;
-    margin-right: 4px;
 }
+
+    .navigation-pages div p {
+        font-weight: 600;
+        color: #021E35;
+    }
