--- a/Codigo/Frota/FrotaWeb/Views/Abastecimento/Delete.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/Abastecimento/Delete.cshtml
@@ -1,11 +1,5 @@
 ﻿@model FrotaWeb.Models.AbastecimentoViewModel
 
-@{
-    ViewData["Title"] = "Delete";
-}
-
-<h1>Delete</h1>
-
 <h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>AbastecimentoViewModel</h4>
@@ -18,16 +12,28 @@
             @Html.DisplayFor(model => model.Id)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IdPercurso)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IdPercurso)
-        </dd>
-        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.IdFornecedor)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.IdFornecedor)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.IdVeiculo)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.IdVeiculo)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.IdFrota)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.IdFrota)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.IdPessoa)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.IdPessoa)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.DataHora)
