--- a/Codigo/Frota/FrotaWeb/Views/Abastecimento/Details.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/Abastecimento/Details.cshtml
@@ -1,11 +1,5 @@
 ﻿@model FrotaWeb.Models.AbastecimentoViewModel
 
-@{
-    ViewData["Title"] = "Details";
-}
-
-<h1>Details</h1>
-
 <div>
     <h4>AbastecimentoViewModel</h4>
     <hr />
@@ -17,16 +11,28 @@
             @Html.DisplayFor(model => model.Id)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IdPercurso)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IdPercurso)
-        </dd>
-        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.IdFornecedor)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.IdFornecedor)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.IdVeiculo)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.IdVeiculo)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.IdFrota)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.IdFrota)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.IdPessoa)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.IdPessoa)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.DataHora)
