--- a/Codigo/Frota/FrotaWeb/Views/Shared/_Layout.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/Shared/_Layout.cshtml
@@ -180,31 +180,31 @@
 		</div>
 	</div>
 	<!-- Modal Sair -->
-	<div id="sairModal" class="modal fade" tabindex="-1" aria-labelledby="logoutModalLabel" aria-hidden="true">
-		<div class="modal-dialog">
-			<div class="modal-content">
-				<div class="modal-header">
-					<h5 class="modal-title" id="logoutModalLabel">FrotaPública</h5>
-					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-				</div>
-				<div class="modal-body">
-					<div>Você tem certeza de que deseja sair?</div>
-				</div>
-				<div class="modal-footer">
-					<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-					<form asp-area="Identity" asp-page="/Account/Login" method="post">
-						<button type="submit" class="btn btn-danger">Sair</button>
-					</form>
-				</div>
-			</div>
-		</div>
-	</div>
-    <script type="text/javascript" src="~/js/navBar.js"></script>
+    <div id="sairModal" tabindex="-1" class="modal fade" role="dialog" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-sm">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Sair <i class="fa fa-sign-out-alt"></i></h4>
+                    <button type="button" class="close" data-bs-dismiss="modal" aria-label="Fechar">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <i class="fa fa-question-circle"></i> Tem certeza que deseja sair?
+                </div>
+                <div class="modal-footer">
+                    <form asp-area="Identity" asp-page="/Account/Login" method="post" class="w-100">
+                        <button type="submit" class="btn btn-danger btn-block">Deslogar</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script type="text/javascript" src="~/js/navBar.js"></script>
     <script src="~/js/home.js" asp-append-version="true"></script>
     <script src="https://cdn.datatables.net/2.1.8/js/dataTables.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-	@await RenderSectionAsync("Scripts", required: false)
+    @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
